<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- HomePage -->
    <string name="app_name">KPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="incomeButton">Income</string>
    <string name="expensesButton">Expenses</string>
    <string name="edit">Edit</string>
    <string name="howMuch">HowMuch</string>
    <string name="summary">Summary</string>
    <string name="exit">Exit</string>

    <!-- Expenses -->
    <string name="title_activity_expenses">Expenses</string>
    <string name="expenses_edit_name"> Name</string>
    <string name="expenses_edit_amount"> Amount </string>
    <string name="expenses_text_dollarsign"> $ </string>
    <string name="expenses_text_reminder"> Reminders </string>
    <string name="expenses_button_datepicker"> Date</string>
    <string name="expenses_button_add"> Add </string>
    <string name="expenses_button_done"> Done </string>
    <string name="expenses_edit_reminder"> 1 </string>
    <string name="expenses_button_plus"> + </string>
    <string name="expenses_button_minus"> - </string>
    <string name="expeneses_daysButton_radio"> Day </string>
    <string name="expeneses_weeksButton_radio"> Week </string>
    <string-array name="expense_type_array">
        <item>Select type</item>
        <item>Rent</item>
        <item>Utilities</item>
        <item>Entertainment</item>
        <item>Insurance</item>
        <item>Transportation</item>
    </string-array>

    <!-- Income -->
    <string name="title_activity_income">Income</string>
    <string name="income_enter_hour_button">Hours</string>
    <string name="income_enter_rate_button">Rate</string>
    <string name="on_campus_radio_button">On Campus</string>
    <string name="off_campus_radio_button">Off Campus</string>
    <string name="other_type_radio_button">Other</string>
    <string name="save_income_button">Save</string>
    <string name="hours">0</string>
    <string name="rate">0.00</string>
      <string-array name="income_recurrence_array">
        <item>Recurrence</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
    </string-array>

    <!-- New User & Login -->
    <string name="user_name_prompt">Username: </string>
    <string name="enter_password_prompt">Password: </string>
    <string name="confirm_passwoard_prompt">Confirm Password: </string>
    <string name="login_button">Login</string>

    <!-- Fragments -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pickHours">Hours Per Week</string>
    <string name="enterRate">Rate per Hour</string>

    <!-- Edit -->
    <string name="title_activity_edit">EditActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="title_activity_how_much">HowMuch</string>

    <!-- HowMuch -->
    <string name="value_Of_HowMuch">HowMuch$</string>

    <!-- Summary -->
    <string name="onCampusValue">OnCampusVal</string>
    <string name="offCampus">OffCampusVal</string>
    <string name="othersValue">OthersVal</string>
    <string name="list_of_expenses">List Of Expenses</string>
</resources>