<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IncomeActivity" >

    <RadioButton
        android:id="@+id/onCampusIncomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCampus"
        android:text="@string/on_campus_radio_button" />

    <RadioButton
        android:id="@+id/offCampusIncomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="offCampus"
        android:text="@string/off_campus_radio_button" />

    <RadioButton
        android:id="@+id/otherIncomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="otherIncome"
        android:text="@string/other_type_radio_button" />

    <LinearLayout
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/enterHoursButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:onClick="onHourClicked"
            android:text="@string/income_enter_hour_button" />

        <TextView
            android:id="@+id/incomeHoursView"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/hours"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/enterRateButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:onClick="enterRate"
            android:text="@string/income_enter_rate_button" />

        <TextView
            android:id="@+id/ratesView"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/rate"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <Button
        android:id="@+id/saveIncomeButton"
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:onClick="onSave"
        android:text="@string/save_income_button" />

</LinearLayout>