<?xml version="1.0"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:id="@+id/home_button_income"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:onClick="LoadIncome"
            android:text="@string/incomeButton" />

        <Button
            android:id="@+id/home_button_expense"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:onClick="LoadExpenses"
            android:text="@string/expensesButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:id="@+id/home_button_summary"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:onClick="LoadEdit"
            android:text="@string/summary" />

        <Button
            android:id="@+id/home_button_howmuch"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:onClick="LoadHowMuch"
            android:text="@string/howMuch" />
    </LinearLayout>

</LinearLayout>