<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SummaryActivity" >

    <TextView
        android:id="@+id/onCampus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/onCampusValue" />

    <TextView
        android:id="@+id/others"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/onCampus"
        android:layout_below="@+id/onCampus"
        android:layout_marginTop="42dp"
        android:hint="@string/othersValue" />

    <TextView
        android:id="@+id/offCampus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/others"
        android:layout_alignLeft="@+id/others"
        android:layout_marginBottom="30dp"
        android:hint="@string/offCampus" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/others"
        android:layout_below="@+id/others"
        android:layout_marginTop="42dp" />

    <TextView
        android:id="@+id/spinnerName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/others"
        android:layout_marginTop="20dp"
        android:hint="@string/list_of_expenses" />

</RelativeLayout>
