<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExpensesActivity" >

    <LinearLayout
        android:id="@+id/expenses_linearlayout_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/expenses_edit_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expenses_edit_name" >
        </EditText>

        <LinearLayout
            android:id="@+id/expenses_linearlayout_date_and_amount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <DatePicker
                android:id="@+id/expenses_datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/expenses_text_dollarsign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenses_text_dollarsign" >
            </TextView>

            <EditText
                android:id="@+id/expenses_edit_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:hint="@string/expenses_edit_amount"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/expenses_linearlayout_reminder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/expenses_text_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenses_text_reminder" >
            </TextView>

            <ToggleButton
                android:id="@+id/expenses_toggle_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>