<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF8C00"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/enterUserNameTextView"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:text="@string/user_name_prompt"
        android:textColor="#000000" 
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/enterUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:layout_marginBottom="10dp" >
    </EditText>

    <TextView
        android:id="@+id/enterPasswordTextView"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_password_prompt"
        android:textColor="#000000" 
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>
    
     <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_button"
        android:layout_marginTop="50dp" />

</LinearLayout>